Added difference equations, no derivation for said difference equations yet (may add later).

--- a/pid_demos/pid_overview/pid_overview.tex
+++ b/pid_demos/pid_overview/pid_overview.tex
@@ -208,7 +208,7 @@ the steady-state error inherent in the proportional term to zero.
 
 If the setpoint suddenly changes to a drastic degree or if the measured process variable jumps significantly, \textit{integral windup}
 can occur wherein the plant process of a PID controller can saturate; that is, reach its physical limit (e.g., drive a valve to be fully
-open or closed). In this case, no physical change in the system can affect the integral term; it will continue to grow without bounds.o
+open or closed). In this case, no physical change in the system can affect the integral term; it will continue to grow without bounds.
 
 Several solutions to this problem are:
 
@@ -226,8 +226,8 @@ and is intended to decrease the rate at which the error increases. Large values 
 error. However, it is sensitive to noise in the process variable (moreso for large values of $K_{d}$) and is often multiplied by a low-pass
 filter to mitigate the high frequency gain and noise.
 
-% section: Implementation
-\section{Implementation}
+% section: Derivation
+\section{Derivation}
 
 To implement the PID algorithm in software, we need to transform the equation into a form that can be represented in code. One way to do
 this is to derive the transfer function of the PID algorithm in the \textit{s-domain} (where output is viewed with respect to frequency
@@ -253,7 +253,7 @@ Divide \textbf{eq.~\ref{eq1}} into three functions $P(t),$ $I(t),$ and $D(t),$ w
 \begin{split}
     P(t) &:= K_{p}e(t) \\
     I(t) &:= K_{i}\int_{0}^{t}e(\tau)d\tau \\
-    D(t) &:= K_{d}\frac{de(t)}{dt} \\
+    D(t) &:= K_{d}\frac{de(t)}{dt}
 \end{split}
 \end{align*}
 
@@ -269,8 +269,8 @@ from $0$ to some number $a \in \R$ that approaches $\infty$ from the left:
 
 With that, we can apply the Laplace transform to $P$, $I$, and $D$.
 
-% subsubsection: Laplace: P(t)
-\subsubsection{Laplace: P(t)}
+% subsubsection: Laplace: Proportional
+\subsubsection{Laplace: Proportional}
 
 \begin{align*}
     \begin{split}
@@ -282,8 +282,8 @@ With that, we can apply the Laplace transform to $P$, $I$, and $D$.
     \end{split}
 \end{align*}
 
-% subsubsection: Laplace: I(t)
-\subsubsection{Laplace: I(t)}
+% subsubsection: Laplace: Integral
+\subsubsection{Laplace: Integral}
 
 \begin{align*}
     \begin{split}
@@ -297,8 +297,8 @@ With that, we can apply the Laplace transform to $P$, $I$, and $D$.
     \end{split}
 \end{align*}
 
-% subsubsection: Laplace: D(t)
-\subsubsection{Laplace: D(t)}
+% subsubsection: Laplace: Derivative
+\subsubsection{Laplace: Derivative}
 
 \begin{align*}
 \begin{split}
@@ -315,9 +315,10 @@ With that, we can apply the Laplace transform to $P$, $I$, and $D$.
 $D(s)$ amplifies higher frequency measurements (or proces noise), resulting in large amounts of change in the output. To reduce the term's responsiveness to
 high frequency noise, is it common to filter the measurements with a low-pass filter. One such implementation is to replace $D(t)$ with the following:
 
-\[ D(t) = \frac{K_{d}sE(s)}{T_{f}s + 1},\] 
+\[ D(t) = \frac{K_{d}sE(s)}{s\tau + 1},\] 
 
-where $T_{f} \in \R$ is a relatively short contant of time.
+where $\tau \in \R$ is a relatively short contant of time.
+
 % subsubsection: Laplace: u(t)
 \subsubsection{Laplace: u(t)}
 
@@ -327,8 +328,8 @@ Applying the Laplace transform to \textbf{eq.\ref{eq1}} gives:
 \begin{split}
     U(s) &= \mathcal{L}\{u(t)\} \\\\
          &= \mathcal{L}\{P(t) + I(t) + D(t)\} \\\\
-         &= K_{p}E(s) + \frac{K_{i}E(s)}{s} + \frac{K_{d}sE(s)}{T_{f}s + 1}\\\\
-         &= \left(K_{p} + \frac{K_{i}}{s} + \frac{K_{d}s}{T_{f}s + 1}\right)E(s)
+         &= K_{p}E(s) + \frac{K_{i}E(s)}{s} + \frac{K_{d}sE(s)}{s\tau + 1}\\\\
+         &= \left(K_{p} + \frac{K_{i}}{s} + \frac{K_{d}s}{s\tau + 1}\right)E(s)
 \end{split}
 \end{align*}
 
@@ -338,13 +339,113 @@ derivative term):
 
 \begin{equation} \label{eq3}
     \boxed{
-        H_{a}(s) := \frac{U(s)}{E(s)} = K_{p} + \frac{K_{i}}{s} + \frac{K_{d}s}{T_{f}s + 1} 
+        H_{a}(s) := \frac{U(s)}{E(s)} = K_{p} + \frac{K_{i}}{s} + \frac{K_{d}s}{s\tau + 1} 
     }
 \end{equation}
 
 % subsection: Bilinear Transform
 \subsection{Bilinear Transform}
 
+Before we derive a difference equation, we would first need to discretize the transfer function $H_{a}(s)$ in \textbf{eq.\ref{eq3}.} For our purposes, we will use
+the bilinear transformation (also known as Tustin's method) for this, as it preserves stability by mapping the left half of the s-plane to the interior
+of the unit circle in the z-domain. Furthermore, it avoids aliasing in the frequency response by mapping the entire imaginary axis fo the s-plane to the
+unit circle.
 
+In practice, this is done by substituting $s$ in $H_{a}(s)$ with the following polynomial:
 
+\begin{equation} \label{eq4}
+    \boxed{ 
+    H(z) := \frac{U(z)}{E(z)} = H_{a}(s) \biggr\rvert_{s=\frac{2}{T}\frac{z-1}{z+1}} = H_{a}\left(\frac{2}{T}\frac{z-1}{z+1}\right)
+    }
+\end{equation}
+
+As before, we divide \textbf{eq.\ref{eq3}} into three functions $P_{a}(s)$, $I_{a}(s)$, and $D_{a}(s)$, where:
+
+\begin{align*}
+\begin{split}
+    P_{a}(s) &:= K_{p} \\
+    I_{a}(s) &:= \frac{K_{i}}{s} \\
+    D_{a}(s) &:= \frac{K_{d}s}{s\tau + 1} = \frac{K_{d}}{\tau + s^{-1}}
+\end{split}
+\end{align*}
+
+Applying \textbf{eq.\ref{eq4}} to $P_{a}(s)$, $I_{a}(s)$, and $D_{a}(s)$ gives the transfer function $H(z)$.
+
+% subsubsection: Bilinear: Proportional
+\subsubsection{Bilinear: Proportional}
+
+\begin{align*}
+\begin{split}
+    P_{b}(z) &:= P_{a}\left(\frac{2}{T}\frac{z-1}{z+1}\right) \\
+             &= K_{p}
+\end{split}
+\end{align*}
+
+% subsubsection: Bilinear: Integral
+\subsubsection{Bilinear: Integral}
+
+\begin{align*}
+\begin{split}
+    I_{b}(z) &:= I_{a}\left(\frac{2}{T}\frac{z-1}{z+1}\right) \\\\
+             &= K_{i}\left(\frac{T}{2}\frac{z+1}{z-1}\right) \\\\
+             &= K_{i}\left(\frac{T}{2}\frac{1+z^{-1}}{1-z^{-1}}\right)
+\end{split}
+\end{align*}
+
+% subsubsection: Bilinear: Derivative
+\subsubsection{Bilinear: Derivative}
+
+\begin{align*}
+\begin{split}
+    D_{b}(z) &:= D_{a}\left(\frac{2}{T}\frac{z-1}{z+1}\right) \\\\
+             &= K_{d}\left(\frac{1}{\tau + \frac{T}{2}\frac{z+1}{z-1}}\right) \\\\
+             &= K_{d}\left(\frac{1}{\frac{2\tau (z-1) + T(z + 1)}{2(z-1)}}\right) \\\\
+             &= K_{d}\left(\frac{2(z-1)}{2\tau (z-1) + T(z+1)}\right) \\\\
+             &= K_{d}\left(\frac{2(1-z^{-1})}{2\tau (1-z^{-1}) + T(1+z^{-1})}\right) \\\\
+\end{split}
+\end{align*}
+
+% subsubsection: Bilinear: Discrete Transfer Function
+\subsubsection{Bilinear: Discrete Transfer Function}
+
+Summing $P_{b}(z)$, $I_{b}(z)$, and $D_{b}(z)$ renders the transfer function for the PID algorithm in the z domain:
+
+\begin{equation} \label{eq5}
+\boxed{
+    H_{b}(z) := \frac{U(z)}{E(z)} = P_{b}(z) + I_{b}(z) + D_{b}(z)
+}
+\end{equation}
+
+% subsection: Difference Equation
+\subsection{Difference Equation}
+
+Converting \textbf{eq.\ref{eq5}} to an equivalent difference equation $u[n], n \in Z$ in the time domain can be accomplished by using the \textit{inverse
+Z-transform}, denoted by $u[n] := \mathcal{Z}^{-1}\{U(z)\}$. To do this, we utilize a property of the Z-transform where taking the inverse
+Z-transform of a function $X(z)$ multiplied by $z^{-k}$, $k > 0$, is equivalent to a shift by $k$ samples in the time domain, i.e.,
+$\mathcal{Z}^{-1}\{z^{-1}X(z)\} = x[n-k].$
+
+By implication, given two functions $Y(z)$ and $X(z)$, we can make the following observation (which will not be proven in this document in
+the interest of brevity):
+\begin{align*}
+\begin{split}
+    Y(z) = z^{-1}X(z) \Rightarrow y[n] = x[n-1].
+\end{split}
+\end{align*}
+
+By multiplying both sides of \textbf{eq.\ref{eq5}} by $E(z)$ and taking the inverse Z-transform of the result, we get the following difference equation:
+
+\begin{equation} \label{eq6}
+\boxed{
+    u[n] := p[n] + i[n] + d[n],
+}
+\end{equation}
+
+where
+\begin{align*}
+\begin{split}
+    p[n] &= K_{p}e[n] \\\\
+    i[n] &= \frac{K_{i}T}{2}\left(e[n] + e[n-1]\right) + i[n-1] \\\\
+    d[n] &= \frac{2K_{d}}{2\tau + T}\left(e[n] - e[n-1]\right) + \frac{2\tau - T}{2\tau + T}d[n-1].
+\end{split}
+\end{align*}
 \end{document}
